# kaleidoscope

./: .gitignore  README.md  cabal.sandbox.config  kaleidoscope.cabal  stack.yaml
src/: Codegen.hs  Emit.hs  Lexer.hs  Main.hs  Parser.hs  Syntax.hs
