name:                kaleidoscope
version:             0.1.0.0
synopsis:            Haskell Kaleidoscope tutorial
description:         Port of the Kaleidoscope tutorial for Haskell and LLVM
homepage:            https://github.com/sdiehl/kaleidoscope
license:             MIT
license-file:        LICENSE-MIT
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2012 Stephen Diehl
Category:            Compilers
build-type:          Simple
cabal-version:       >=1.10
Bug-Reports:         https://github.com/sdiehl/kaleidoscope/issues

Flag Tutorial
  Description: Compile with pandoc preprocessor
  Default:     False

Source-Repository head
    Type: git
    Location: git@github.com:sdiehl/kaleidoscope.git

executable kaleidoscope
  default-language:    Haskell2010
  main-is:             Main.hs
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.1.1
    , llvm-general-pure    >= 3.5.0.0
    , parsec               >= 3.1
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
    , containers           >= 0.4
  hs-source-dirs:          src
  -- ghc-options:             -prof -with-rtsopts='-xc' -- ghc runtime flag

library
  default-language:    Haskell2010
  build-depends:
      base                 >= 4.6
    , haskeline            >= 0.7.1.2
    , llvm-general         >= 3.5.1.1
    , llvm-general-pure    >= 3.5.0.0
    , mtl                  >= 2.1.3
    , transformers         >= 0.3.0.0 && < 0.5
